Fix https://issues.apache.org/bugzilla/show_bug.cgi?id=49143 Threading / initialisation issues. Not all were valid. Make them volatile anyway so FindBugs doesn't complain. Fix some additional issues - use of valueOf() - found along the way
git-svn-id: https://svn.apache.org/repos/asf/tomcat/trunk@937309 13f79535-47bb-0310-9956-ffa450edef68